--- a/packages/@weex/plugins/debug/package.json
+++ b/packages/@weex/plugins/debug/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@weex-cli/debug",
-  "version": "2.0.0-beta.31",
-  "description": "Module for debug weex file",
+  "name": "@dcloudio/nvue-debugger",
+  "version": "0.0.103",
+  "description": "Module for debug nvue file",
   "main": "index.js",
   "scripts": {
     "format": "eslint ./src --fix",
@@ -9,9 +9,10 @@
     "prepublish": "npm run lint && npm run build",
     "build": "cd frontend && npm i && npm run compile"
   },
-  "author": "Mario <faterrole@gmail.com>",
+  "author": "",
   "files": [
     "src/",
+    "bin/",
     "frontend/public/",
     "!frontend/public/weex",
     "commands/",
@@ -20,6 +21,9 @@
     "package.json"
   ],
   "license": "MIT",
+  "bin": {
+    "nvue": "./bin/debug.js"
+  },
   "dependencies": {
     "boxen": "^2.1.0",
     "chalk": "^1.1.3",
@@ -39,7 +43,8 @@
     "opn": "^5.4.0",
     "parse-hosts": "^1.0.1",
     "puppeteer": "^1.11.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yargs-parser": "^13.1.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
@@ -51,9 +56,6 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "prettier": "^1.14.0"
-  },
-  "pluginDependencies": {
-    "@weex-cli/compile": "latest"
   },
   "gitHead": "a0368eeb37e9e6165ab64e754b82f169b0582628"
 }
