--- a/packages/@weex/plugins/debug/package.json
+++ b/packages/@weex/plugins/debug/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-debugger",
-  "version": "0.0.100",
+  "version": "0.0.104",
   "description": "uni-app debugger",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
   "dependencies": {
     "boxen": "^2.1.0",
     "chalk": "^1.1.3",
+    "chrome-opn": "^1.0.1",
     "commander": "^2.9.0",
     "del": "^2.2.1",
     "detect-port": "^1.3.0",
@@ -40,9 +41,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-websocket": "^5.0.1",
-    "opn": "^5.4.0",
     "parse-hosts": "^1.0.1",
-    "puppeteer": "^1.18.0",
     "puppeteer-cn": "^0.1.8",
     "uuid": "^3.3.2",
     "yargs-parser": "^13.1.1"
